# aoc

./: .gitignore  AOC2017D1P1.py  README.md  profile.json  program.prof  project_utils.py  pyproject.toml  requirements.pip
.zed/: settings.json
2015/Day 1/: Puzzle 1.py  Puzzle 2.py
2015/Day 2/: Puzzle 1.py  Puzzle 2.py
2015/Day 3/: Puzzle 1.py  Puzzle 2.py
2015/Day 4/: Puzzle 1.py  Puzzle 2.py
2015/Day 5/: Puzzle 1.py  Puzzle 2.py
2015/Day 6/: Puzzle 1.py  Puzzle 2.py
2015/Day 7/: Puzzle 1.py  Puzzle 2.py
2017/Day 1/: Part 1.py  Part 2.py
2017/Day 10/: Part 1.py  Part 2.py
2017/Day 11/: Part 1.py  Part 2.py
2017/Day 12/: Part 1.py  Part 2.py
2017/Day 13/: Part 1.py  Part 2.py
2017/Day 14/: Part 1.py  Part 2.py
2017/Day 15/: Part 1.py  Part 2.py
2017/Day 16/: Part 1.py  Part 2.py
2017/Day 17/: Part 1.py  Part 2.py
2017/Day 18/: Part 1.py  Part 2.py
2017/Day 2/: Part 1.py  Part 2.py
2017/Day 3/: Part 1.py  Part 2.py
2017/Day 4/: Part 1.py  Part 2.py
2017/Day 5/: Part 1.py  Part 2.py
2017/Day 6/: Part 1&2.py
2017/Day 7/: Part 1.py  Part 2.py
2017/Day 8/: Part 1&2.py
2017/Day 9/: Part 1.py  Part 2.py
2018/: Day 1.py  Day 10.py  Day 11.py  Day 12.py  Day 16.py  Day 18.py  Day 2.py  Day 3.py  Day 4.py  Day 5.py  Day 6.py  Day 7.py  Day 8.py  Day 9.py
2019/Day 1/: Part 1.py  Part 2.py
2019/Day 2/: Part 1.py  Part2.py
2019/Day 3/: Part 1.py  UPart 2.py
2020/day1/: part1.py  part2.py
2020/day2/: part1.py  part2.py
2025/: README.md  aoc2025analysis.xlsx
_rust_abandoned_2025/: Cargo.toml  README.md
(+180 files in other folders)
