[project]
name = "aoc"
version = "2024.0.0"
description = "My solutions to the Advent of Code challenges"
authors = [{name = "Alex Nathanail", email = "adnathanail@hotmail.co.uk"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data==2.1.1",
    "networkx==3.6.1",
    "pillow>=11.0.0",
    "pydot>=3.0.3",
    "scipy>=1.16.3",
    "snakeviz>=2.2.2",
]

[tool.black]
line-length = 160
